--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@ P {
 A {
   text-decoration: none;
   font-family:Monotype Corsiva;
-  color: #1fadd7;
-  font-size: 1000%;
+  color: #9ACD32;
+  font-size: 10000%;
   }
  A:visited {
     color: #f55200;
