--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ A {
     font-size: 100%;
    }
 H3 { 
-    
+    font-size: 300%
     font-family: Arial, Helvetica, sans-serif; 
     color: #DC143C; 
    }
